--- a/DiabetesPrediction/App/app/src/main/res/layout/activity_main.xml
+++ b/DiabetesPrediction/App/app/src/main/res/layout/activity_main.xml
@@ -232,20 +232,22 @@
                     android:orientation="horizontal">
 
                     <RadioButton
-                        android:id="@+id/radioButton"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginTop="30dp"
-                        android:checked="true"
-                        android:text="Male"
-                        tools:ignore="MissingConstraints" />
-
-                    <RadioButton
                         android:id="@+id/radioButton2"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="30dp"
+                        android:checked="true"
                         android:text="Female"
+                        tools:ignore="MissingConstraints"
+                        />
+
+                    <RadioButton
+                        android:id="@+id/radioButton"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="30dp"
+                        android:text="Male"
+                        android:checked="false"
                         app:layout_constraintStart_toEndOf="@+id/radioButton"
 
                         app:layout_constraintTop_toBottomOf="@+id/dpfInput" />
